<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="calculate">Calculate</string>
    <string name="fine_15">Fine (15%)</string>
    <string name="great_18">Great (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip: %s</string>
    <string name="total_amount">Total amount: %s</string>
</resources>