<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="32dp"
    tools:layout_editor_absoluteY="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:srcCompat="@drawable/ic_baseline_storefront_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--    <EditText-->
        <!--        android:minHeight="48dp"-->
        <!--        android:textColorHint="?android:attr/textColorHint"-->
        <!--        android:textSize="20sp"-->
        <!--        tools:ignore="TextContrastCheck"-->
        <!--        android:importantForAutofill="no" />-->

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:srcCompat="@drawable/ic_baseline_room_service_24" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checkedButton="@id/option_twenty_percent"
            app:layout_constraintStart_toStartOf="@+id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_18" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fine_15" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_up_switch"
            app:srcCompat="@drawable/ic_baseline_call_made_24" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_round_up_switch"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/round_up_switch" />

        <TextView
            android:id="@+id/result"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            tools:text="Tip amount: $0" />

        <TextView
            android:id="@+id/total"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            tools:text="Tip amount: $0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>